@@ -594,7 +594,7 @@ SCREEN SHOTS
 WritePCXfile
 ==============
 */
-static void WritePCXfile (const char *filename, byte *data, int width, int height, int rowbytes, byte *palette)
+static int WritePCXfile (const char *filename, byte *data, int width, int height, int rowbytes, byte *palette)
 {
 	int	i, j;
 	size_t	length;
@@ -605,7 +605,7 @@ static void WritePCXfile (const char *filename, byte *data, int width, int heigh
 	if (pcx == NULL)
 	{
 		Con_Printf("%s: not enough memory\n", __thisfunc__);
-		return;
+		return -1;
 	}
 
 	pcx->manufacturer = 0x0a;	// PCX id
@@ -650,7 +650,7 @@ static void WritePCXfile (const char *filename, byte *data, int width, int heigh
 
 // write output file 
 	length = pack - (byte *)pcx;
-	FS_WriteFile (filename, pcx, length);
+	return FS_WriteFile(filename, pcx, length);
 }
 
 /*
@@ -691,12 +691,13 @@ static void SCR_ScreenShot_f (void)
 	D_EnableBackBufferAccess ();	// enable direct drawing of console
 					// to back buffer
 
-	WritePCXfile (pcxname, vid.buffer, vid.width, vid.height, vid.rowbytes, host_basepal);
+	i = WritePCXfile (pcxname, vid.buffer, vid.width, vid.height, vid.rowbytes, host_basepal);
 
 	D_DisableBackBufferAccess ();	// for adapters that can't stay mapped
 					// in for linear writes all the time
 
-	Con_Printf ("Wrote %s\n", pcxname);
+	if (i == 0)
+		Con_Printf ("Wrote %s\n", pcxname);
 }
 
 //=============================================================================
